debezium/dbz#1025 Fix code formatting in HttpChangeConsumer
Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>
Signed-off-by: danastott <danastott@gmail.com>